# botivy

./: .gitignore  Dockerfile  README.md  pyproject.toml
deploy/: Caddyfile  ivybot.service
ivy_bot/: __main__.py  actions.py  api.py  aws_lambda.py  bot.py  parser.py
terraform/: main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
